maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: too many arguments for method markGround: ()Unit
    markGround(x, y - 1, dis + 1)
              ^JediEscaper:20: error: too many arguments for method markGround: ()Unit
    markGround(x, y + 1, dis + 1)
              ^JediEscaper:22: error: too many arguments for method markGround: ()Unit
    markGround(x - 1, y, dis + 1)
              ^JediEscaper:24: error: too many arguments for method markGround: ()Unit
    markGround(x + 1, y, dis + 1)
              ^